Update image tag to v1.0.5

--- a/values.yaml
+++ b/values.yaml
@@ -1,7 +1,7 @@
 replicaCount: 2
 image:
   repository: minhitptit/nnm-vdt2024-frontend-app
-  tag: latest
+  tag: v1.0.5
 service:
   nodePort: 30001
 env: production
